# ai-plugin-scanner

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-requirements.txt  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements-atheris.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-lock.yml  e2e-test.yml  fuzz.yml  harness-smoke.yml  publish-action-repo.yml  publish.yml  scorecard.yml
action/: README.legacy.md  README.md  action.yml
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: app.tsx  approval-center-layout.tsx  approval-center-primitives.tsx  approval-center-utils.ts  fleet-workspace.tsx  guard-api.ts  guard-demo.ts  guard-types.ts  main.tsx  receipts-workspace.tsx  runtime-overview.tsx  settings-workspace.tsx  styles.css
docs/guard/: approval-audit.md  architecture.md  competitive-parity-matrix.md  get-started.md  harness-support.md  local-dashboard-failure-ledger.md  local-dashboard-redesign-todo.md  local-vs-cloud.md  repo-boundaries.md  testing-matrix.md
docs/trust/: mcp-trust-draft.md  plugin-trust-draft.md  skill-trust-local.md
fuzzers/: manifest_fuzzer.py
schemas/: plugin-quality.v1.json  scan-result.v1.json  verify-result.v1.json
src/codex_plugin_scanner/: __init__.py  action_runner.py  argparse_utils.py  cli.py  cli_ui.py  config.py  github_reporting.py  lint_fixes.py  marketplace_support.py  models.py  path_support.py  policy.py  quality_artifact.py  repo_detect.py  reporting.py  scanner.py  submission.py  suppressions.py  trust_domain_scoring.py  trust_helpers.py  trust_mcp_scoring.py  trust_models.py  trust_plugin_scoring.py  trust_scoring.py  trust_skill_scoring.py  trust_specs.py  verification.py  version.py
src/codex_plugin_scanner/checks/: best_practices.py  claude.py  code_quality.py  ecosystem_common.py  gemini.py  manifest.py  manifest_support.py  marketplace.py  mcp_security.py  opencode.py  operational_security.py  security.py  skill_security.py
src/codex_plugin_scanner/ecosystems/: __init__.py  base.py  claude.py  codex.py  detect.py  gemini.py  opencode.py  registry.py  types.py
src/codex_plugin_scanner/guard/: __init__.py  advisory_model.py  approvals.py  capabilities.py  codex_config.py  config.py  edge_events.py  incident.py  launcher.py  mcp_tool_calls.py  models.py  protect.py  redaction.py  risk.py  shims.py  store.py  store_approvals.py  store_connect.py  types.py
src/codex_plugin_scanner/guard/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  copilot.py  cursor.py  gemini.py  hermes.py  mcp_servers.py  opencode.py  opencode_artifacts.py
src/codex_plugin_scanner/guard/bridge/: __init__.py
src/codex_plugin_scanner/guard/cli/: __init__.py  approval_commands.py  bootstrap.py  commands.py  connect_flow.py  install_commands.py  product.py  prompt.py  render.py  update_commands.py
src/codex_plugin_scanner/guard/consumer/: __init__.py  service.py
src/codex_plugin_scanner/guard/daemon/: __init__.py  client.py  manager.py  server.py
src/codex_plugin_scanner/guard/policy/: __init__.py  engine.py
src/codex_plugin_scanner/guard/proxy/: __init__.py  remote.py  runtime_mcp.py  stdio.py
src/codex_plugin_scanner/guard/receipts/: __init__.py  manager.py
src/codex_plugin_scanner/guard/runtime/: __init__.py  runner.py  secret_file_requests.py  surface_server.py
src/codex_plugin_scanner/guard/schemas/: __init__.py  consumer_mode.py  guard_event_v1.py  surface_server.py
src/codex_plugin_scanner/integrations/: __init__.py  cisco_mcp_scanner.py  cisco_skill_scanner.py
src/codex_plugin_scanner/rules/: __init__.py  registry.py  specs.py
tests/: test-trust-scoring.py  test_action_bundle.py  test_action_runner.py  test_best_practices.py  test_cisco_install_surfaces.py  test_cli.py  test_code_quality.py  test_config.py  test_coverage_remaining.py  test_ecosystems.py  test_edge_cases.py  test_final_coverage.py  test_guard_approvals.py  test_guard_bootstrap.py  test_guard_capabilities.py  test_guard_claude_adapter.py  test_guard_cli.py  test_guard_codex_e2e.py  test_guard_codex_install.py  test_guard_codex_proxy.py  test_guard_config_paths.py  test_guard_connect_flow.py  test_guard_consumer_mode.py  test_guard_copilot_adapter.py  test_guard_copilot_proxy.py  test_guard_daemon_manager.py  test_guard_event_schema_v1.py  test_guard_events.py  test_guard_launch_env.py  test_guard_opencode_proxy.py  test_guard_product_flow.py  test_guard_protect.py  test_guard_render.py  test_guard_risk.py  test_guard_runtime.py  test_guard_store_migrations.py  test_guard_surface_server.py  test_guard_verdicts.py  test_hermes_adapter.py  test_integration.py  (+19 more)
tests/fixtures/: mcp-canary-server.py
tests/fixtures/bad-plugin/: .env  .mcp.json  secrets.js
tests/fixtures/bad-plugin/.codex-plugin/: plugin.json
tests/fixtures/claude-plugin-good/: README.md  SECURITY.md
tests/fixtures/claude-plugin-good/.claude-plugin/: plugin.json
tests/fixtures/claude-plugin-good/hooks/: hooks.json
tests/fixtures/code-quality-bad/: evil.js  inject.js
tests/fixtures/gemini-extension-good/: GEMINI.md  README.md  gemini-extension.json
tests/fixtures/gemini-extension-good/commands/: hello.toml
tests/fixtures/good-plugin/: LICENSE  README.md  SECURITY.md
tests/fixtures/good-plugin/.codex-plugin/: plugin.json
tests/fixtures/guard-codex-malicious-mcp/.codex/: config.toml
tests/fixtures/hermes-plugin-evil/: config.yaml  mcp_servers.json
tests/fixtures/malicious-skill-plugin/: README.md  SECURITY.md
tests/fixtures/malicious-skill-plugin/.codex-plugin/: plugin.json
tests/fixtures/minimal-plugin/.codex-plugin/: plugin.json
tests/fixtures/missing-fields/.codex-plugin/: plugin.json
tests/fixtures/mit-license/: LICENSE
tests/fixtures/opencode-good/: README.md  opencode.jsonc
tests/fixtures/with-marketplace/: marketplace-broken.json  marketplace.json
(+28 files in other folders)
