[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-plugin-scanner"
version = "1.4.0"
description = "Security, operational-security, and publishability scanner for Codex plugins with Cisco-backed skill analysis."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Hashgraph Online", email = "dev@hol.org" },
]
keywords = ["codex", "plugin", "scanner", "security", "mcp", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
cisco = [
    # Temporary fork pin until upstream cisco-ai-skill-scanner ships a LiteLLM fix.
    "cisco-ai-skill-scanner @ git+https://github.com/hashgraph-online/skill-scanner.git@9b0ea08111f9129abfdf7aedc47322615cda1164",
]
dev = [
    "build>=1.2.2",
    "jsonschema>=4.23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[dependency-groups]
publish = [
    "twine>=6.1.0",
]

[project.scripts]
codex-plugin-scanner = "codex_plugin_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/hashgraph-online/codex-plugin-scanner"
Repository = "https://github.com/hashgraph-online/codex-plugin-scanner"
Issues = "https://github.com/hashgraph-online/codex-plugin-scanner/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
