[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hol-guard"
version = "2.0.0"
description = "Protect local AI harnesses with HOL Guard and run scanner checks for Codex, Claude, Cursor, Gemini, and OpenCode."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Hashgraph Online", email = "dev@hol.org" },
]
keywords = ["plugin", "scanner", "security", "mcp", "cli", "codex", "claude", "gemini", "opencode", "ecosystem"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "cisco-ai-skill-scanner~=2.0.8",
]

[project.optional-dependencies]
cisco = []
dev = [
    "build>=1.2.2",
    "jsonschema>=4.23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
publish = [
    "twine>=6.1.0",
]

[project.scripts]
hol-guard = "codex_plugin_scanner.cli:main"
plugin-scanner = "codex_plugin_scanner.cli:main"
plugin-guard = "codex_plugin_scanner.cli:main"
codex-plugin-scanner = "codex_plugin_scanner.cli:main"
plugin-ecosystem-scanner = "codex_plugin_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/hashgraph-online/ai-plugin-scanner"
Repository = "https://github.com/hashgraph-online/ai-plugin-scanner"
Issues = "https://github.com/hashgraph-online/ai-plugin-scanner/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["tests/test-trust-scoring.py", "tests/test-trust-specs.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_plugin_scanner"]

[tool.hatch.build]
artifacts = ["src/codex_plugin_scanner/guard/daemon/static/**"]
exclude = [
    ".guard-live/**",
    ".guard-package-venv/**",
    ".guard-e2e/**",
    ".guard-e2e-prod/**",
    ".guard-e2e-prod2/**",
    ".guard-prod-venv/**",
    ".guard-prod-venv-fresh/**",
    "dashboard/node_modules/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
