[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hol-guard"
version = "2.0.0"
description = "Protect local AI harnesses with HOL Guard and run scanner checks for Codex, Claude, Cursor, Gemini, and OpenCode."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Hashgraph Online", email = "dev@hol.org" },
]
keywords = ["plugin", "scanner", "security", "mcp", "cli", "codex", "claude", "gemini", "opencode", "ecosystem"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0",
    "cryptography>=47.0.0",
    "tomli>=2.0; python_version < '3.11'",
    "cisco-ai-skill-scanner~=2.0.9",
]

[project.optional-dependencies]
cisco = [
    "cisco-ai-mcp-scanner~=4.6; python_version >= '3.11'",
]
dev = [
    "build>=1.2.2",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
publish = [
    "twine>=6.2.0",
]

[tool.uv]
override-dependencies = [
    "click==8.1.8",
    "jsonschema==4.23.0",
    "litellm>=1.83.7",
    "openai==2.30.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
]

[project.scripts]
hol-guard = "codex_plugin_scanner.cli:main"
plugin-scanner = "codex_plugin_scanner.cli:main"
plugin-guard = "codex_plugin_scanner.cli:main"
plugin-ecosystem-scanner = "codex_plugin_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/hashgraph-online/ai-plugin-scanner"
Repository = "https://github.com/hashgraph-online/ai-plugin-scanner"
Issues = "https://github.com/hashgraph-online/ai-plugin-scanner/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["tests/test-trust-scoring.py", "tests/test-trust-specs.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_plugin_scanner"]

[tool.hatch.build]
artifacts = ["src/codex_plugin_scanner/guard/daemon/static/**"]
exclude = [
    ".guard-live/**",
    ".guard-package-venv/**",
    ".guard-e2e/**",
    ".guard-e2e-prod/**",
    ".guard-e2e-prod2/**",
    ".guard-prod-venv/**",
    ".guard-prod-venv-fresh/**",
    "dashboard/node_modules/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/mcp-canary-server.py" = ["N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
